hphp/hack/test/typecheck/new_inference/typehole/lambda_tyvar.php.like_types.exp
File "lambda_tyvar.php", line 7, characters 24-62:
Invalid argument (Typing[4110])
File "lambda_tyvar.php", line 4, characters 28-45:
Expected ~(function(dynamic): void) because it is an unenforceable type
File "lambda_tyvar.php", line 7, characters 24-62:
But got (function(dynamic $y): dynamic)
